--- a/allerExercise.html
+++ b/allerExercise.html
@@ -165,7 +165,7 @@
             
                 
                 <br>
-                <button type="button" onclick="checkAnswers()">Submit</button>
+                <button type="button" onclick="checkAnswersAllerQuiz()">Submit</button>
             </form>
             </section>
         </div>
