--- a/avoirExercise.html
+++ b/avoirExercise.html
@@ -162,7 +162,7 @@
                     
                         
                         <br>
-                        <button type="button" onclick="checkAnswers()">Submit</button>
+                        <button type="button" onclick="checkAnswersAvoirAnswers()">Submit</button>
                     </form>
                     </section>
                 </div>
