update wording of checkbox questions

--- a/allerExercise.html
+++ b/allerExercise.html
@@ -136,7 +136,8 @@
             
                 <!-- Translate "Tu vas à l'école" -->
                     <fieldset class="translateTuVasALecole">
-                        <legend>Which of the following sentences is a correct translation of the sentence?<br>"Tu vas &#224; l'&#233;cole."</legend>
+                        <legend>Select all correct translations of the following sentence:
+                            <br>"Tu vas &#224; l'&#233;cole."</legend>
             
                         <label class="checkbox-label">You went to school.
                             <input type="checkbox" name="translateTuVasEcole" value="youWentSchool">
