--- a/avoirExercise.html
+++ b/avoirExercise.html
@@ -133,7 +133,7 @@
                     
                         <!-- Translate "Everyone has a cat" -->
                             <fieldset class="translateEveryoneHasACat">
-                                <legend>Which of the following sentences is a correct translation of the sentence?<br>" Everyone has a cat."</legend>
+                                <legend>Select all correct translations of the following sentence:<br>"Everyone has a cat."</legend>
                     
                                 <label class="checkbox-label">Tous les jeunes ont un chat.
                                     <input type="checkbox" name="translateEveryoneHasACat" value="jeunesOntChat">
