--- a/faireExercise.html
+++ b/faireExercise.html
@@ -122,7 +122,7 @@
             
                 <!-- Translate "Are you doing your homework?" -->
                     <fieldset class="translateAreYouDoingHomework">
-                        <legend>Which of the following sentences is a correct translation of the sentence?<br>"Are you doing your homework?"</legend>
+                        <legend>Select all correct translations of the following sentence:<br>"Are you doing your homework?"</legend>
             
                         <label class="checkbox-label">Fais-tu tes devoirs? <!-- Correct answer -->
                             <input type="checkbox" name="translateAreYouDoingHomework" value="faisTuDevoirs">
