background for the input bits on quizzes

--- a/faireExercise.html
+++ b/faireExercise.html
@@ -61,7 +61,7 @@
                 <form name="quiz">
                 
             <!-- Faire in "Vous" form -->
-                    <fieldset class="FaireInVous">
+                    <fieldset class="faireInVous">
                         <legend>Conjugate "faire" in the "elle" form</legend>
                 
                         <label class="radio-label">
