er ir verbs boldified endings

--- a/ERverbs.html
+++ b/ERverbs.html
@@ -69,32 +69,32 @@
         </tr>
         <tr>
             <td>je</td>
-            <td>e</td>
+            <td><b>e</b></td>
         </tr>
         <tr>
             <td>tu</td>
-            <td>es</td>
+            <td><b>es</b></td>
         </tr>
         <tr>
             <td>il/ elle/ on</td>
-            <td>e</td>
+            <td><b>e</b></td>
         </tr>
         <tr>
             <td>nous</td>
-            <td>ons</td>
+            <td><b>ons</b></td>
         </tr>
         <tr>
             <td>vous</td>
-            <td>ez</td>
+            <td><b>ez</b></td>
         </tr>
         <tr>
             <td>ils/ elles</td>
-            <td>ent</td>
+            <td><b>ent</b></td>
         </tr>
        </table>
     
-    <p>So, jouer would be conjugated like this...</p>
-    <p>First take off the "er" from jouer</p>
+    <p>So, jou<b>er</b> would be conjugated like this...</p>
+    <p>First take off the "<b>er</b>" from jou<b>er</b></p>
     <p>So, it becomes jou</p>
     <p>Next, add the appropriate endings.</p>    
     
@@ -107,27 +107,27 @@
         </tr>
         <tr>  <!--figure out how to make endings in jouER table bold-->
             <td>je</td>
-            <td>joue</td>
+            <td>jou<b>e</b></td>
         </tr>
         <tr>
             <td>tu</td>
-            <td>joues</td>
+            <td>jou<b>es</b></td>
         </tr>
         <tr>
             <td>il/ elle/ on</td>
-            <td>joue</td>
+            <td>jou<b>e</b></td>
         </tr>
         <tr>
             <td>nous</td>
-            <td>jouons</td>
+            <td>jou<b>ons</b></td>
         </tr>
         <tr>
             <td>vous</td>
-            <td>jouez</td>
+            <td>jou<b>ez</b></td>
         </tr>
         <tr>
             <td>ils/ elles</td>
-            <td>jouent</td>
+            <td>jou<b>ent</b></td>
         </tr>
        </table>
     </main>
