glossary stem defintion and re verbs bold endings update

--- a/REverbs.html
+++ b/REverbs.html
@@ -61,7 +61,7 @@
           <p>When conjugating RE verbs, first cut off RE part and then add the ending. <br> These are the endings below.</p>
       
           <!--Table of conjugation of RE verbs-->
-      <p>_ this means there is no ending. <br>
+      <p><b>_ this means there is no ending; you just leave the stem as is.</b><br>
       So for the il/elle/on row there is no ending added on the end of the stem.</p>
          <table>
           <tr>
