bold endings update

--- a/Glossary.html
+++ b/Glossary.html
@@ -88,8 +88,8 @@
     
     <h2>Stem</h2>
     <p>
-       In French verb conjugation, the "stem" (also called the "radical") is the part of the verb that remains constant when conjugating, and it's formed by removing the infinitive ending (-er, -ir, or -re). <br>
-       For example, the "stem" of the infinitive "habiter" is "habit".
+       In French verb conjugation, the "stem" (also called the "radical") is the part of the verb that remains constant when conjugating, and it's formed by removing the infinitive ending (<b>-er</b>, <b>-ir</b>, or <b>-re</b>). <br>
+       For example, the "stem" of the infinitive "habit<b>-er</b>" is "habit".
     
     </p>
 
