--- a/REverbs.html
+++ b/REverbs.html
@@ -54,11 +54,11 @@
           </header>
           <main>
           <h2>RE verbs</h2>
-          <h3>Conjugating "-RE" in the present tense</h3>
-          <p>"-RE" verbs</p>
+          <h3>Conjugating "-<b>re</b>" in the present tense</h3>
+          <p>"-<b>re</b>" verbs</p>
       
-          <p>RE verbs are the least common verb type in French.</p>
-          <p>When conjugating RE verbs, first cut off RE part and then add the ending. <br> These are the endings below.</p>
+          <p>-<b>re</b> verbs are the least common verb type in French.</p>
+          <p>When conjugating -<b>re</b> verbs, first cut off -<b>re</b> part and then add the ending. <br> These are the endings below.</p>
       
           <!--Table of conjugation of RE verbs-->
       <p><b>_ this means there is no ending; you just leave the stem as is.</b><br>
