--- a/faireExercise.html
+++ b/faireExercise.html
@@ -54,7 +54,7 @@
          
     </header>
     <main>
-        <h2>Faire Cojugation Quiz</h2>
+        <h2>Faire Conjugation Quiz</h2>
         
         <div class="quizFaireBlock">
             <section class="quiz">
