--- a/etreExercise.html
+++ b/etreExercise.html
@@ -118,7 +118,7 @@
                                  <input type="radio" name="translateTuEsCoiffeur" value="youAreHairedresser">
                              </label><br>
                  
-                             <label class="radio-label">>You are a hairdresser. 
+                             <label class="radio-label">You are a hairdresser. 
                                  <input type="radio" name="translateTuEsCoiffeur" value="youAreAHairedresser">
                              </label><br><!-- Correct answer -->
                  
